# mini-local-RAG

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.mini-local-rag  Dockerfile.ollama
scripts/: ollama_run.sh  ollama_start.sh  ollama_stop.sh
src/mini_local_rag/: __about__.py  __main__.py  cli.py  config.py  embedder.py  pipeline.py  pipeline_builder.py  save_documents.py  tf_idf_retriever.py  vector_store.py
src/mini_local_rag/ask/: draft_response.py  generate_embedding.py  log_retrieval.py  retrieve_tf_idf.py  retrieve_vector.py
src/mini_local_rag/ingest/: chunk_markdown.py  convert_markdown.py  generate_embeddings.py  pdf_parse.py  persist_changes.py  replace_images.py  update_tf_idf_retreiver.py
src/mini_local_rag/list_documents/: create_display_output.py  search_store.py
src/mini_local_rag/logger/: log_record.py  structured_logger.py
tests/: __init__.py  chunk_markdown_test.py  e2e_pipeline_test.py  embedder_test.py  pipeline_test.py  tf_idf_retriever_test.py  vector_store_test.py
